<resources>
    <string name="app_name">Gavin - StratDex</string>

    <string name="greeting">Hello! Click load to begin populating the PokéDex</string>

    <string name="searchPlaceholder">Search...</string>

    <string name="about">
        Pokémon data from: PokeAPI \n https://pokeapi.co/ \n\n
        Pokémon GIFs from: Smogon \n smogon.com/dex/xy/pokemon/ \n\n
        Pokémon sprites from: PokeAPI \n https://github.com/PokeAPI/pokeapi/tree/master/data/v2/sprites/pokemon
    </string>
    <string name="reinitialise">Hey this is gonna reset everything!
        \nGenerally you want to do this when new stuff comes out so it pulls the new data.
        \n\nOr you can do it for fun, I\'m not gonna stop you.
    </string>
    <string name="loadTitle">Load all?</string>
    <string name="load">
        Hey this is gonna preload everything for all Pokémon so you don\'t have to wait the first time.
        \n\nThis is actually going to take ages, but you can still use the app while you wait. Just don\'t go too far ahead or you\'ll time out.
    </string>

    <string name="searchNone">No Pokémon found! Try searching something else.</string>


    <string name="typeLabel">Type</string>
    <string name="statsLabel">Stats</string>
    <string name="abilitiesLabel">Abilities</string>

    <string name="stat1">HP</string>
    <string name="stat2">Attack</string>
    <string name="stat3">Defense</string>
    <string name="stat4">Sp.Atk</string>
    <string name="stat5">Sp.Def</string>
    <string name="stat6">Speed</string>


    <string name="heightLabel">Height</string>
    <string name="weightLabel">Weight</string>
    <string name="genLabel">Generation</string>
    <string name="regionLabel">Home Region</string>
    <string name="descLabel">Description</string>
    <string name="evolutionLabel">Evolution</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
