<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sv_main"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    android:scrollbars="horizontal">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rl_main"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"

        tools:context="com.amisrs.gavin.stratdex.view.DetailsMiscFragment">

        <TextView
            android:id="@+id/tv_descLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/statbar_gap"
            android:textSize="@dimen/heading2"
            android:text="@string/descLabel"/>
        <TextView
            android:layout_below="@id/tv_descLabel"
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TableLayout
            android:id="@+id/tl_heightweight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/tv_desc"
            android:stretchColumns="*">
            <TableRow
                android:layout_marginBottom="@dimen/statbar_gap"
                >
                <TextView
                    android:id="@+id/heightLabel"
                    android:layout_width="0dp"
                    android:textSize="@dimen/heading3"
                    android:textStyle="bold"
                    android:text="@string/heightLabel"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:textSize="@dimen/heading3"
                    android:textStyle="bold"
                    android:text="@string/weightLabel"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="0dp"
                    android:id="@+id/tv_height"
                    android:text=""
                    />
                <TextView
                    android:layout_width="0dp"
                    android:id="@+id/tv_weight"
                    android:text=""
                    />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/tv_evolutionLabel"
            android:layout_below="@id/tl_heightweight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/heading2"
            android:text="@string/evolutionLabel"/>


    </RelativeLayout>
</ScrollView>